--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "build": "rimraf public && webpack --config webpack.build.js --progress --color -p --display-error-details",
-    "start": "rimraf public && webpack --watch --progress --color -p --display-error-details",
-    "server": "rimraf public && webpack-dev-server --inline --progress"
+    "start": "rimraf public && webpack --progress --color -p --display-error-details",
+    "server": " webpack-dev-server --inline --progress"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -21,8 +21,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "semantic-ui-react": "^0.79.1",
     "webpack-cli": "^2.0.14"
   }
 }
