--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "webpack-dev-server": "^3.1.3"
   },
   "scripts": {
-    "build": "rimraf public && webpack --config webpack.build.js --progress --color -p --display-error-details",
+    "build:production": "rimraf public && webpack --env.production --progress --color -p --display-error-details",
+    "build:development": "rimraf public && webpack --env.development --progress --color -p --display-error-details",
     "start": "rimraf public && webpack --progress --color -p --display-error-details",
     "server": " webpack-dev-server --inline --progress"
   },
