--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,6 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "less": "^3.0.2",
@@ -36,7 +35,7 @@
     "redux": "^4.0.0",
     "semantic-ui-react": "^0.79.1",
     "style-loader": "^0.21.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-merge": "^4.1.2"
+    "url-loader": "^1.0.1",
+    "webpack-cli": "^2.0.14"
   }
 }
