--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "build:production": "rimraf public && webpack --env=production --progress --color --display-error-details",
     "server": "webpack-dev-server --env=development --progress --color --display-error-details",
     "start": "webpack --env=development --progress --color --display-error-details",
-    "test": "jest"
+    "test": "jest --no-cache"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -24,14 +24,18 @@
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
+    "prop-types": "^15.6.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-test-renderer": "^16.3.2",
     "redux": "^4.0.0",
     "semantic-ui-react": "^0.79.1",
     "style-loader": "^0.21.0",
