--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "build:production": "rimraf public && webpack --env=production --progress --color --display-error-details",
     "server": "webpack-dev-server --env=development --progress --color --display-error-details",
     "start": "webpack --env=development --progress --color --display-error-details",
-    "test": "jest --no-cache"
+    "test": "jest --no-cache",
+    "ui-test": "mocha ./e2e/tests/*.js"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -22,6 +23,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "chromedriver": "^2.38.3",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
@@ -32,11 +34,13 @@
     "jest": "^22.4.3",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
+    "mocha": "^5.1.1",
     "prop-types": "^15.6.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-test-renderer": "^16.3.2",
     "redux": "^4.0.0",
+    "selenium-webdriver": "^3.6.0",
     "semantic-ui-react": "^0.79.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
